# ChangeLog for media-gfx/gimp-print
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/Attic/ChangeLog,v 1.22 2003/09/26 19:04:56 lanius Exp $

*gimp-print-4.3.21 (26 Sep 2003)

  26 Sep 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.21.ebuild:
  version bump

*gimp-print-4.3.20 (03 Sep 2003)

  03 Sep 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.18.ebuild,
  gimp-print-4.3.20.ebuild:
  version bump

*gimp-print-4.3.19 (11 Aug 2003)

  11 Aug 2003; lanius@gentoo.org gimp-print-4.2.2.ebuild,
  gimp-print-4.2.5-r1.ebuild, gimp-print-4.2.5.ebuild,
  gimp-print-4.3.19.ebuild:
  version bump

*gimp-print-4.2.5-r2 (31 Jul 2003)

  31 Jul 2003; lanius@gentoo.org gimp-print-4.2.5-r2.ebuild:
  backport of 4.3.18 ebuild to stable series

  29 Jul 2003; lanius@gentoo.org gimp-print-4.3.18.ebuild:
  stable bump

  20 Jul 2003; lanius@gentoo.org gimp-print-4.3.18.ebuild:
  fixed cups use flag (bug #24873)

*gimp-print-4.3.18 (16 Jul 2003)

  16 Jul 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.18.ebuild:
  fixed missing libgimpprint.so.1 (#20016) and merged gimp-print-cups and
  gimp-print

*gimp-print-4.2.5-r1 (04 Jul 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*gimp-print-4.2.5 (28 Jan 2003)

  03 Jul 2003; Guy Martin <gmsoft@gentoo.org> gimp-print-4.2.5-r1.ebuild :
  Added hppa to KEYWORDS.

  08 Mar 2003; Thomas Raschbacher <lordvan@gentoo.org> *.ebuild:
  added dep for !net-print/gimp-print-cups because of conflicts

  07 Mar 2003; Thomas Raschbacher <lordvan@gentoo.org> gimp-print-4.2.5.ebuild:
  Mark stable on x86

  07 Mar 2003; Thomas Raschbacher <lordvan@gentoo.org> gimp-print-4.2.5-r1.ebuild:
  should now work with gimp-1.3 only too - please test (bug #14909)
	
  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> gimp-print-4.2.5.ebuild :
  Mark stable on Alpha
