@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/gimp-print
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/Attic/ChangeLog,v 1.22 2003/09/26 19:04:56 lanius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/Attic/ChangeLog,v 1.23 2003/09/28 17:48:01 pyrania Exp $
+
+  28 Sep 2003; Markus Nigbur <pyrania@gentoo.org> gimp-print-4.2.5-r2.ebuild,
+  gimp-print-4.3.18.ebuild, gimp-print-4.3.19.ebuild,
+  gimp-print-4.3.20.ebuild, gimp-print-4.3.21.ebuild:
+  Removed block of merged media-gfx/gimp-print-cups
 
 *gimp-print-4.3.21 (26 Sep 2003)
 
